# services/api-gateway/docs/swagger.yaml
@@ -83,11 +83,6 @@ definitions:
       last_name:
         example: Doe
         type: string
-      token:
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-        type: string
-    required:
-    - token
     type: object
   handler.User:
     properties:
@@ -113,14 +108,6 @@ definitions:
       last_name:
         example: Doe
         type: string
-    type: object
-  handler.ValidateTokenRequest:
-    properties:
-      token:
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-        type: string
-    required:
-    - token
     type: object
 host: localhost:8080
 info:
@@ -227,17 +214,16 @@ paths:
       tags:
       - auth
   /api/v1/auth/validate:
-    post:
+    get:
       consumes:
       - application/json
       description: Validate an authentication token
       parameters:
-      - description: Token to validate
-        in: body
-        name: request
+      - description: Bearer token
+        in: header
+        name: Authorization
         required: true
-        schema:
-          $ref: '#/definitions/handler.ValidateTokenRequest'
+        type: string
       produces:
       - application/json
       responses:
@@ -275,7 +261,7 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       security:
-      - ApiKeyAuth: []
+      - BearerAuth: []
       summary: Get current user
       tags:
       - user
@@ -310,7 +296,7 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       security:
-      - ApiKeyAuth: []
+      - BearerAuth: []
       summary: Update current user
       tags:
       - user
@@ -331,15 +317,19 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       security:
-      - ApiKeyAuth: []
+      - BearerAuth: []
       summary: WebSocket chat
       tags:
       - chat
 schemes:
 - http
 securityDefinitions:
-  ApiKeyAuth:
+  BearerAuth:
+    type: http
+    scheme: bearer
+    bearerFormat: JWT
     in: header
     name: Authorization
-    type: apiKey
+security:
+  - BearerAuth: []
 swagger: "2.0"
